# spacegom-web

./: .dockerignore  .env.example  .gitignore  .pylintrc  API.md  CONTEXT.md  CONTEXT_ACTUALIZADO.md  DATABASE.md  DICE_SYSTEM.md  DICE_SYSTEM.md.backup  Dockerfile  IMPLEMENTACION_CONTRATACION.md  PROJECT_RULES.md  README.md  REGLAS_MORAL_EXPERIENCIA.md  SESION_ACTUAL.md  accion_comercio_de_mercancias.md  campaña.md  docker-compose.yml  fix_db.py  hello.py  implementacion_transporte_pasajeros.md  primer_objetivo.md  pyproject.toml  review.md  spacegom.sh
.VSCodeCounter/2026-01-20_09-49-20/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-01-28_08-37-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cursor/rules/: frontend-js.mdc  project-core.mdc  python-backend.mdc  templates-html.mdc
app/: __init__.py  aws_client.py  aws_setup.py  clean_local_db.py  database.py  dice.py  event_handlers.py  event_logger.py  game_state.py  import_planets.py  main.py  migrate_to_dynamodb.py  models.py  name_suggestions.py  personnel_manager.py  planets_repo.py  run.py  ship_data.py  time_manager.py  trade_manager.py  update_planets_from_excel.py  utils.py
docs/: README.md  aws_setup.md  base.html.md  components.md  dashboard.html.md  database.md  dice-roller.md  dice.md  event_handlers.md  event_logger.md  game_state.md  import_planets.md  index.html.md  main.md  migrate_to_dynamodb.md  models.md  name_suggestions.md  passenger_transport.md  personnel.html.md  personnel_manager.md  remaining_templates.md  run.md  setup.html.md  ship_data.md  state_file.md  time_manager.md  trade.html.md  trade_manager.md  update_planets_from_excel.md  utils.md
files/: nombres_megacorp.csv  nombres_naves.csv  nombres_personal.csv
functional/: implementacion_transporte_pasajeros.md
old_docs/: HiringEndpointsNotes.md  OLD_CONTEXT_ACTUALIZADO.md  OLD_Implementation.md  migrate_preserve_planets.py  planets_backup.json
(+24 files in other folders)
